# win-todopin

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  card.html  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: index.html  style.css
scripts/: gen-icon-source.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  shortcuts.rs  state.rs  storage.rs  tray.rs  windows.rs
src/card/: Card.svelte  main.ts
src/lib/: ConfirmDialog.svelte  api.ts  appThemes.ts  i18n.ts  themes.ts  types.ts  updater.ts
src/manager/: Manager.svelte  main.ts
src/styles/: card.css  global.css  manager.css
